--- a/restaurant.html
+++ b/restaurant.html
@@ -18,11 +18,11 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a tabindex="1" href="/">Restaurant Reviews</a></h1>
+      <h1><a aria-label="Restaurant Reviews" tabindex="1" href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a tabindex="2" href="/">Home</a></li>
+    <ul aria-label="Breadcrumb" id="breadcrumb" >
+      <li><a aria-label="Home" tabindex="2" href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
