--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <main id="maincontent">
     <section aria-hidden="true" aria-label="Map" id="map-container" tabindex="-1">
-      <div id="map"></div>
+      <div id="map" aria-label="location" role="application"></div>
     </section>
     <section>
       <div class="filter-options">
